--- a/script.css
+++ b/script.css
@@ -30,6 +30,11 @@
     font-weight: 600;
 }
 
+.info a{
+    text-decoration: none;
+    color: black;
+}
+
 .res-container{
     display: grid;
     grid-template-columns: repeat(4, 250px);
