--- a/script.css
+++ b/script.css
@@ -41,21 +41,26 @@
     gap: 15px;
     padding: 10px;
     justify-content: center;
+    
     /* width: 80%; */
     /* align-items: center; */
 }
+.res-container a{
+    text-decoration: none;
 
+}
 .res-card{
     /* min-height: fit-content; */
     border: 1px solid gray;
     padding: 5px;
     background-color: #f0f0f0;
     border-radius: 5px;
-    overflow: hidden;
-    white-space: normal;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
+    /* overflow: hidden; */
+    /* white-space: normal; */
+    /* word-wrap: break-word; */
+    /* overflow-wrap: break-word; */
     border: 2px solid transparent;
+    color: black;
 }
 .res-card h2{
     margin-bottom: 4px;
@@ -137,5 +142,21 @@
 
 .server404 img{
     
-    height: 80vh
+    height: 80vh;
+}
+
+.userFunComp, .userClassComp{
+    padding: 10px;
+    border: 2px solid black;
+    background-color: beige;
+    /* max-width: min-content;x */
+    width: 300px;
+    margin-bottom: 4px;
+}
+
+.countBtn{
+    padding: 3px 7px;
+    border: none;
+    background-color: pink;
+    border-radius: 5px;
 }
