TailwindCSS, Context API,Redux

--- a/script.css
+++ b/script.css
@@ -1,162 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-.nav-Bar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 100vw;
-    height: 15vh;
-    /* border: 2px solid black; */
-    padding: 0 10px;
-    background-color: aliceblue;
-
-}
-
-
-.logo-img img{
-    width: 75px;
-}
-
-.info{
-    display: flex;
-}
-
-.info li{
-    list-style-type: none;
-    margin: 10px;
-    font-weight: 600;
-}
-
-.info a{
-    text-decoration: none;
-    color: black;
-}
-
-.res-container{
-    display: grid;
-    grid-template-columns: repeat(4, 250px);
-    gap: 15px;
-    padding: 10px;
-    justify-content: center;
-    
-    /* width: 80%; */
-    /* align-items: center; */
-}
-.res-container a{
-    text-decoration: none;
-
-}
-.res-card{
-    /* min-height: fit-content; */
-    border: 1px solid gray;
-    padding: 5px;
-    background-color: #f0f0f0;
-    border-radius: 5px;
-    /* overflow: hidden; */
-    /* white-space: normal; */
-    /* word-wrap: break-word; */
-    /* overflow-wrap: break-word; */
-    border: 2px solid transparent;
-    color: black;
-}
-.res-card h2{
-    margin-bottom: 4px;
-}
-
-.res-card:hover{
-    border: 2px solid black;
-    cursor: pointer;
-}
-
-.res-card img{
-    width: 100%;
-    height: 200px;
-    margin-bottom: 10px;
-}
-
-.filter{
-    padding:5px 5px;
-    font-size: 14px;
-    border: none;
-    border-radius: 3px;
-    margin-top: 10px;
-    background-color: pink;
-    cursor: pointer;
-    height: 30px;
-    width: 100px;
-}
-
-.myShimmer{
-    display: grid;
-    grid-template-columns: repeat(4, 250px);
-    gap: 15px;
-    padding: 10px;
-    justify-content: center;
-}
-
-.shimmerItem{
-    background-color: rgb(221, 231, 231);
-    height: 300px;
-}
-
-.loginBtn{
-    padding: 5px 10px;
-    cursor: pointer;
-    background-color: aquamarine;
-    border: none;
-    border-radius: 5px;
-}
-
-.additions{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.inputBar{
-    background-color: aliceblue;
-    height: 30px;
-    border-radius: 5px;
-    font-size: medium;
-    padding: 0 4px;
-
-}
-.searchBtn{
-    height: 30px;
-    background-color: azure;
-    border-radius: 5px;
-    margin-left: 5px;
-    cursor: pointer;
-    padding: 0 4px;
-    font-size: medium;
-}
-
-.server404{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.server404 img{
-    
-    height: 80vh;
-}
-
-.userFunComp, .userClassComp{
-    padding: 10px;
-    border: 2px solid black;
-    background-color: beige;
-    /* max-width: min-content;x */
-    width: 300px;
-    margin-bottom: 4px;
-}
-
-.countBtn{
-    padding: 3px 7px;
-    border: none;
-    background-color: pink;
-    border-radius: 5px;
-}
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
